@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-12T08:23:11Z",
+  "timestamp" : "2022-10-12T16:33:46Z",
   "count_outdated" : 576,
   "uniques_outdated" : 331,
   "count" : 598,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
