@@ -1,3 +1,11 @@
+2022-10-12T16:33:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3236347999 # 929
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 331 576 / 343 598
+* notice: next accum: outdated-unq outdated-all / unq all: 331 576 / 343 598
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-28 2022-10-12]
+
 2022-10-12T08:23:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3233140788 # 928
 * notice: last 14d: unq all: 5 22
